# tradebot-python

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  TradeBot_Code_Review_Report.docx  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
apps/api/: main.py  run.py  socket_instance.py
apps/api/routers/: backtests.py  instruments.py  ops.py  strategy.py  ticks.py
apps/cli/: main.py
docs/: cheat_sheet.md  cron.md  data_management.md  devops_guide.md  functional_design.md  live_trading_guide.md  mongo_migrate.md  operational_guide.md  optimised_strategy_configs.md  project_layout_and_architecture.md  testing_guide.md
scripts/: compact_ticks.py  crossover_calculator.py  daily_trade_workflow.sh  debug_reliance_touchline.py  debug_xts_socket.py  export_instrument_master.py  fetch_nifty_options.py  get_ohlc_data.py
scripts/verification/: verify_api_sync.py  verify_auto_shift.py
tests/backtest/: backtest_base.py  backtest_runner.py  db_mode.py  socket_mode.py  test_ema_stagnation.py  test_fund_manager_heartbeat.py  test_indicator_robustness.py
tests/frozen_db/: test_engine_pipeline.py  test_signal_orchestration.py
tests/no_db/: reproduce_warmup_leak.py  test_candle_resampler.py  test_data_gaps_logic.py  test_date_utils.py  test_discovery_domain.py  test_engine_flow.py  test_eod_controls.py  test_gap_protection.py  test_indicator_prefix_mapping.py  test_indicators_domain.py  test_multi_instrument_warmup.py  test_order_manager.py  test_papertrade_timestamps.py  test_pnl_accuracy.py  test_position_manager.py  test_position_manager_lots.py  test_replay_utils.py  test_settings.py  test_simulator.py  test_strategies_logic.py  test_strike_resolution.py  test_trade_config_service.py  test_trade_event_logic.py  test_trade_formatter.py  test_tsl_activation.py  test_types.py  test_xts_exception.py  test_xts_manager.py
tests/readwrite_db/: test_collectors.py
tests/services/: test_live_market.py
tests/xts/: test_live_warmup_normalization.py  test_xts_bridge.py  test_xts_epoch.py  test_xts_live_stream.py  test_xts_socket.py
(+2 files in other folders)
